eod commit 07/09
